# ImLogDetective

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  coverage.yml
EventHandling/: CMakeLists.txt  EventHandling.cmake  TestEventHandling.cmake
EventHandling/inc/EventHandling/: Event.hpp  IEvent.h
EventHandling/src/: EventLoop.cxx
EventHandling/test/mocks/: EventMock.h
EventHandling/test/src/: TestEvent.cxx  TestEventLoop.cxx
ImLogDetective/: CMakeLists.txt  ImLogDetective.cmake  TestImLogDetective.cmake
ImLogDetective/inc/: ImLogDetectiveDefs.h
ImLogDetective/inc/dearimgui/: GlfwBackendBinding.h  IIOContext.h  IImGuiMenuBarWrapper.h  IImGuiWidgetWrapper.h  IListTreeWidget.h  IMainViewPort.h  IOContext.h  IOContextImpl.h  ImGuiMenuBarWrapper.h  ImGuiMenuBarWrapperImpl.h  ImGuiTextFilterWrapper.h  ImGuiTextFilterWrapperImpl.h  ImGuiWidgetWrapper.h  ImGuiWidgetWrapperImpl.h  ListTreeWidget.h  ListTreeWidgetImpl.h  MainViewPort.h  MainViewPortImpl.h  ScopedImGuiMenuBar.hpp  ScopedImGuiWindow.h  ScopedImGuiWindow.hpp  ScopedImGuiWindowImpl.hpp  TabBar.h  TabBarImpl.h  TextColor.h
ImLogDetective/inc/models/: AssetsConfigurator.h  AssetsConfiguratorImpl.h  FontConfigurator.h  GzipFile.h  GzipFileImpl.h  IAssetsConfigurator.h  IFontConfigurator.h  ILogDataModel.h  IMini.h  LogDataModel.h  LogDataModelImpl.h  LogFileParser.h  LogFileParserImpl.h  LogLine.h  Mini.h  MiniImpl.h
ImLogDetective/inc/presenters/: CopyLogsPresenter.h  CopyLogsPresenterImpl.h  FileListPresenter.h  FileListPresenterImpl.h  IFileListPresenter.h  ILogDataModelFactory.h  ILogFilePresenter.h  ILogFileTabsPresenter.h  IMainPresenter.h  LogDataModelFactory.h  LogDataModelFactoryImpl.h  LogFilePresenter.h  LogFilePresenterImpl.h  LogFileTabsPresenter.h  LogFileTabsPresenterImpl.h  MainPresenter.h  MainPresenterImpl.h
ImLogDetective/inc/views/: CopyLogs.h  CopyLogsPopup.h  CopyLogsPopupImpl.h  FileListView.h  FileListViewImpl.h  FolderSelectionPopup.h  FolderSelectionPopupImpl.h  IFileListView.h  IFolderSelectionPopup.h  ILogFilterView.h  ILogView.h  IModalPopupFactory.h  IProtectedInputPopup.h  ITextWidgetFactory.h  ListTreeFactory.h  LogFilterView.h  LogFilterViewImpl.h  LogView.h  LogViewImpl.h  ModalPopupFactory.h  Popup.h  ProtectedInputPopup.h  ProtectedInputPopupImpl.h  SelectionMenuBar.h  SelectionMenuBarImpl.h  TextWidgetFactory.h  WidgetFactory.h  WidgetFactoryImpl.h  WindowFactory.h
ImLogDetective/src/: ImLogDetectiveDefs.cxx  main.cxx
ImLogDetective/src/dearimgui/: GlfwBackendBinding.cxx  IOContext.cxx  ImGuiMenuBarWrapper.cxx  ImGuiMenuBarWrapperImpl.cxx  ImGuiTextFilterWrapper.cxx  ImGuiTextFilterWrapperImpl.cxx  ImGuiWidgetWrapper.cxx  ImGuiWidgetWrapperImpl.cxx  ListTreeWidgetImpl.cxx  MainViewPort.cxx  MainViewPortImpl.cxx  TabBar.cxx  TabBarImpl.cxx
ImLogDetective/src/models/: AssetsConfigurator.cxx  AssetsConfiguratorImpl.cxx  FontConfigurator.cxx  GzipFile.cxx  GzipFileImpl.cxx  LogDataModel.cxx  LogDataModelImpl.cxx  LogFileParser.cxx  LogFileParserImpl.cxx  LogLine.cxx  MiniImpl.cxx
ImLogDetective/src/presenters/: CopyLogsPresenter.cxx  CopyLogsPresenterImpl.cxx  FileListPresenter.cxx  FileListPresenterImpl.cxx  LogDataModelFactory.cxx  LogDataModelFactoryImpl.cxx  LogFilePresenter.cxx  LogFilePresenterImpl.cxx  LogFileTabsPresenter.cxx  LogFileTabsPresenterImpl.cxx  MainPresenter.cxx  MainPresenterImpl.cxx
ImLogDetective/src/views/: CopyLogsPopup.cxx  CopyLogsPopupImpl.cxx  FileListViewImpl.cxx  FolderSelectionPopup.cxx  FolderSelectionPopupImpl.cxx  LogFilterView.cxx  LogFilterViewImpl.cxx  LogView.cxx  LogViewImpl.cxx  ProtectedInputPopup.cxx  ProtectedInputPopupImpl.cxx  SelectionMenuBar.cxx  SelectionMenuBarImpl.cxx  WidgetFactory.cxx  WidgetFactoryImpl.cxx
ImLogDetective/test/inc/: ImVec.h  TestUtility.h
ImLogDetective/test/mocks/: CopyLogsPopupMock.h  CopyLogsPresenterMock.h  EventLoopMock.h  FileListPresenterMock.h  FileListViewMock.h  FolderSelectionPopupMock.h  ImGuiMenuBarWrapperMock.h  ImGuiTextFilterWrapperMock.h  ImGuiWidgetWrapperMock.h  ListTreeFactoryMock.h  ListTreeWidgetMock.h  LogDataModelFactoryMock.h  LogDataModelMock.h  LogFileParserMock.h  LogFilePresenterMock.h  LogFileTabsPresenterMock.h  LogFilterViewMock.h  LogViewMock.h  MainViewPortMock.h  MiniMock.h  ModalPopupFactoryMock.h  ScpExecutorMock.h  (+5 more)
LogFetchingTool/: CMakeLists.txt  LogFetchingTool.cmake  TestLogFetchingTool.cmake
LogFetchingTool/inc/: Authentication.h  IAuthentication.h  IChannel.h  ISshSession.h  LibSsh2Init.h  SshSession.h
LogFetchingTool/src/: ForwardChannel.cxx  IOMultiPlexor.cxx
LogFetchingTool/test/: TestAuthentication.cxx  TestForwardChannel.cxx  TestSocket.cxx
ScpWrapper/: CMakeLists.txt  ScpWrapper.cmake  TestScpWrapper.cmake
ScpWrapper/src/: AuthenticationWorkFlow.cxx  PtyMaster.cxx  ScpExecutor.cxx
ScpWrapper/test/: TestPtyMaster.cxx  TestScpExecutor.cxx
log_analyzer_tool/: CMakeLists.txt  log_analyzer_tool.cmake  test_log_analyzer_tool.cmake
log_analyzer_tool/inc/: IMainView.h  ImLogDetectiveDefs.h  LogAnalyzerToolDefs.h  MainView.h  MainViewModel.h
log_analyzer_tool/src/: ImLogDetectiveDefs.cxx  LogAnalyzerToolDefs.cxx  MainView.cxx  MainViewModel.cxx  main.cxx
log_analyzer_tool/test/: main.cxx
log_event_handling/: CMakeLists.txt  log_event_handling.cmake  test_log_event_handling.cmake
log_event_handling/src/: EventLoop.cxx
log_fetching_tool/: log_fetching_tool copy.cmake  log_fetching_tool.cmake  test_log_fetching_tool.cmake
log_fetching_tool/inc/: ForwardChannel.h  IIOMultiPlexor.h  IOMultiPlexor.h  ISocket.h  Socket.h
log_fetching_tool/src/: Authentication.cxx  Socket.cxx  SshSession.cxx
log_fetching_tool/test/: TestSocket.cxx
log_scp_wrapper/: CMakeLists.txt  find_libssh2.cmake  log_scp_wrapper.cmake  test_log_scp_wrapper.cmake
log_scp_wrapper/inc/: IPtyMaster.h  IScpExecutor.h  ISocket.h  PtyMaster.h  ScpExecutor.h  Socket.h
log_scp_wrapper/src/: AuthenticationWorkFlow.cxx  PtyMaster.cxx  ScpExecutor.cxx  Socket.cxx
log_scp_wrapper/test/: TestPtyMaster.cxx  TestScpExecutor.cxx
(+182 files in other folders)
